# creamy

./: Cargo.toml  deny.toml
.github/workflows/: ci.yml
.zed/: settings.json
bus/cbus/: Cargo.toml
bus/cbus-core/: Cargo.toml
bus/cbus-core-macros/: Cargo.toml
bus/cbus-core-macros/src/: lib.rs
bus/cbus-core/src/: lib.rs  message.rs  untyped.rs
bus/cbus/src/: config.rs  lib.rs  lookup.rs
bus/cbus/src/cpu/: mod.rs  offsets.rs  runner.rs  set.rs
bus/cbus/src/cpu/arch/generic/: scalar.rs
bus/cbus/src/cpu/arch/x86/: avx2.rs  avx512.rs  mod.rs  sse41.rs
bus/cbus/src/sys/: buffer_pool.rs  mod.rs
bus/cbus/tests/: cfg_errors.rs  registration.rs  success.rs
bus/macro-utils/: Cargo.toml
crates/compiler-utils/: Cargo.toml
crates/compiler-utils/src/: bstring.rs  strpool.rs
crates/creamy-compiler/: Cargo.toml
crates/creamy-compiler/src/: compiler.rs  lib.rs  resolver.rs  utils.rs
crates/creamy-compiler/src/model/types/: message.rs  mod.rs  protocol.rs
crates/creamy-compiler/src/tree/types/: field.rs  message.rs  protocol.rs  structure.rs
crates/creamy-compiler/tests/: success.rs  success.xml
devkit/creamy-devkit/: Cargo.toml
devkit/creamy-devkit-cli/: Cargo.toml  build.rs
devkit/creamy-devkit-cli/src/: cli.rs  init.rs  main.rs  show.rs
devkit/creamy-devkit/src/: error.rs  lib.rs  load.rs  write.rs
devkit/creamy-libgen-c/: Cargo.toml
devkit/creamy-libgen-rs/: Cargo.toml
devkit/creamy-libgen-rs/src/: lib.rs
devkit/creamy-manifest/: Cargo.toml
devkit/creamy-manifest/src/: error.rs  lib.rs
devkit/creamy-protocol/: Cargo.toml
devkit/creamy-protocol-tui/: Cargo.toml
devkit/creamy-protocol-tui/src/: lib.rs  memory.rs
devkit/creamy-utils/: Cargo.toml
devkit/creamy-utils/src/: array.rs  bstring.rs  lib.rs  list.rs  strpool.rs  version.rs
devkit/creamy-xmlc/: Cargo.toml
devkit/creamy-xmlc/src/: compiler.rs  error.rs  lib.rs  nodes.rs  table.rs  tokenizer.rs  tree.rs  version.rs
devkit/creamy-xmlc/src/model/: definition.rs  mod.rs  ranges.rs
devkit/creamy-xmlc/src/model/symbols/: enumeration.rs  field.rs  mod.rs  numeric.rs  remainder.rs
devkit/creamy-xmlc/src/utils/: align.rs  macros.rs  mod.rs  pool.rs  size.rs  vec.rs
devkit/creamy-xmlc/tests/: api.rs  errors.rs  generator.rs  size.xml  success.rs  success.xml
example/plugin/: manifest.toml  protocols.toml
example/plugin/definitions/: api.xml
examples/ping/: manifest.toml
examples/ping/definitions/: ping.xml
examples/ping/plugin/: Cargo.toml  build.rs
examples/ping/plugin/protocols/: success.xml
examples/ping/plugin/src/: lib.rs
