[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
#strip = "symbols"

[workspace]
resolver = "2"
members = [
    "bus/cbus",
    "bus/cbus-core",
    "bus/cbus-core-macros",
    "bus/macro-utils",
    "devkit/creamy-devkit",
    "devkit/creamy-devkit-cli",
    "devkit/creamy-libgen-c",
    "devkit/creamy-libgen-rs",
    "devkit/creamy-manifest",
    "devkit/creamy-protocol",
    "devkit/creamy-protocol-tui",
    "devkit/creamy-utils",
    "devkit/creamy-xmlc",
    "examples/ping/plugin",
]

[workspace.dependencies]
cbus = { path = "bus/cbus" }
cbus-core = { path = "bus/cbus-core" }
cbus-core-macros = { path = "bus/cbus-core-macros" }
macro-utils = { path = "bus/macro-utils" }

creamy-devkit = { path = "devkit/creamy-devkit" }
creamy-libgen-c = { path = "devkit/creamy-libgen-c" }
creamy-libgen-rs = { path = "devkit/creamy-libgen-rs" }
creamy-manifest = { path = "devkit/creamy-manifest" }
creamy-protocol = { path = "devkit/creamy-protocol" }
creamy-protocol-tui = { path = "devkit/creamy-protocol-tui" }
creamy-utils = { path = "devkit/creamy-utils" }
creamy-xmlc = { path = "devkit/creamy-xmlc" }

anyhow = "1.0.102"
as-guard = "0.1.0"
idmint = { version = "0.2.2", features = ["stack"] }
static_assertions = "1.1.0"
cfg-if = "1.0.4"
syn = "2.0.117"
quote = "1.0.45"
proc-macro2 = "1.0.106"
proc-macro-crate = "3.5.0"
criterion = { version = "0.8.2", features = ["html_reports"] }
bitflags = "2.11.1"
chrono = "0.4.44"
derive_more = { version = "2.1.1", features = ["from", "display"] }
notify = "8.2.0"
regex = "1.12.3"
tree-sitter = "0.26.8"
zip = "8.6.0"
env_logger = "0.11.10"
lazy_static = "1.5.0"
tempfile = "3.27.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-tracy = "0.11.4"
downcast-rs = "2.0.2"
binrw = "0.15.1"
thiserror = { version = "2.0.18", features = ["default"] }
roxmltree = "0.21.1"
strum = { version = "0.28.0", features = ["derive"] }
ptree = "0.5.2"
console = "0.16.3"

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive", "std"]

[workspace.dependencies.clap]
version = "4.6.1"
features = ["derive"]
default-features = true

[workspace.dependencies.toml]
version = "1.1.2"
default-features = false
features = ["serde", "parse"]
