[package]
name = "cbus-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cbus-core-macros.workspace = true
as-guard.workspace = true
static_assertions.workspace = true
downcast-rs.workspace = true
bytemuck = { version = "1.25.0", default-features = false, features = [
    "derive",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
