[package]
name = "creamy-devkit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
creamy-devkit.workspace = true
creamy-protocol-tui.workspace = true
creamy-xmlc.workspace = true
creamy-utils.workspace = true
clap.workspace = true
rustyline = "18.0.0"

[dev-dependencies]
assert_cmd = "2.2.1"

[build-dependencies]
clap.workspace = true
clap_complete = "4.6.3"

[[bin]]
name = "creamy"
path = "src/main.rs"
